.metadata/.plugins/org.eclipse.cdt.ui/9-UART_ReciveInterrupt.build.log
15:42:04 **** Incremental Build of configuration Debug for project 9-UART_ReciveInterrupt ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/UartDriver.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/UartDriver.d" -MT"Core/Src/UartDriver.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/UartDriver.o"
arm-none-eabi-gcc "../Core/Src/syscalls.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/syscalls.d" -MT"Core/Src/syscalls.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/syscalls.o"
arm-none-eabi-gcc "../Core/Src/sysmem.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/sysmem.d" -MT"Core/Src/sysmem.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/sysmem.o"
arm-none-eabi-gcc "../Core/Src/system_stm32f4xx.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/system_stm32f4xx.d" -MT"Core/Src/system_stm32f4xx.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/system_stm32f4xx.o"
In file included from ../Core/Src/UartDriver.c:9:
../Core/Inc/UartDriver.h:49:2: error: #endif without #if
   49 | #endif /* INC_UARTDRIVER_H_ */
      |  ^~~~~
../Core/Src/UartDriver.c:13:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   13 | UART_HandleTypeDef UartHandle;
      | ^~~~~~~~~~~~~~~~~~
      | DMA_HandleTypeDef
../Core/Src/UartDriver.c: In function 'ART_Init':
../Core/Src/UartDriver.c:19:3: error: 'huart2' undeclared (first use in this function)
   19 |   huart2.Instance = USART2;
      |   ^~~~~~
../Core/Src/UartDriver.c:19:3: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/UartDriver.c:21:28: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
   21 |   huart2.Init.WordLength = UART_WORDLENGTH_8B;
      |                            ^~~~~~~~~~~~~~~~~~
../Core/Src/UartDriver.c:22:26: error: 'UART_STOPBITS_1' undeclared (first use in this function)
   22 |   huart2.Init.StopBits = UART_STOPBITS_1;
      |                          ^~~~~~~~~~~~~~~
../Core/Src/UartDriver.c:23:24: error: 'UART_PARITY_NONE' undeclared (first use in this function)
   23 |   huart2.Init.Parity = UART_PARITY_NONE;
      |                        ^~~~~~~~~~~~~~~~
../Core/Src/UartDriver.c:24:22: error: 'UART_MODE_TX_RX' undeclared (first use in this function)
   24 |   huart2.Init.Mode = UART_MODE_TX_RX;
      |                      ^~~~~~~~~~~~~~~
../Core/Src/UartDriver.c:25:27: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function)
   25 |   huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |                           ^~~~~~~~~~~~~~~~~~~
../Core/Src/UartDriver.c:26:30: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function)
   26 |   huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |                              ^~~~~~~~~~~~~~~~~~~~
../Core/Src/UartDriver.c:27:7: warning: implicit declaration of function 'HAL_UART_Init'; did you mean 'UART_Init'? [-Wimplicit-function-declaration]
   27 |   if (HAL_UART_Init(&huart2) != HAL_OK)
      |       ^~~~~~~~~~~~~
      |       UART_Init
../Core/Src/UartDriver.c:29:5: warning: implicit declaration of function 'Error_Handler' [-Wimplicit-function-declaration]
   29 |     Error_Handler();
      |     ^~~~~~~~~~~~~
../Core/Src/UartDriver.c:35:6: error: 'huart' undeclared (first use in this function)
   35 |   if(huart->Instance==USART2)
      |      ^~~~~
At top level:
../Core/Src/UartDriver.c:16:13: warning: 'ART_Init' defined but not used [-Wunused-function]
   16 | static void ART_Init(void){
      |             ^~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/UartDriver.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j4 all" terminated with exit code 2. Build might be incomplete.

15:42:04 Build Failed. 12 errors, 3 warnings. (took 688ms)

